--- a/css/style.css
+++ b/css/style.css
@@ -1,1039 +1,23 @@
 body {
-  margin: 0 auto;
-  width: 10%;
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.containerX {
-  width: 100%;
+#containerX {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+  height: 80vh;
+  width: 500px;
 }
 
 .divX {
-  height: 20px;
-  max-width: 80px;
-}
-
-.divX:nth-child(0) {
-  background-color: black;
-}
-
-.divX:nth-child(1) {
-  background-color: #010000;
-}
-
-.divX:nth-child(2) {
-  background-color: #020000;
-}
-
-.divX:nth-child(3) {
-  background-color: #030000;
-}
-
-.divX:nth-child(4) {
-  background-color: #040000;
-}
-
-.divX:nth-child(5) {
-  background-color: #050000;
-}
-
-.divX:nth-child(6) {
-  background-color: #060000;
-}
-
-.divX:nth-child(7) {
-  background-color: #070000;
-}
-
-.divX:nth-child(8) {
-  background-color: #080000;
-}
-
-.divX:nth-child(9) {
-  background-color: #090000;
-}
-
-.divX:nth-child(10) {
-  background-color: #0a0000;
-}
-
-.divX:nth-child(11) {
-  background-color: #0b0000;
-}
-
-.divX:nth-child(12) {
-  background-color: #0c0000;
-}
-
-.divX:nth-child(13) {
-  background-color: #0d0000;
-}
-
-.divX:nth-child(14) {
-  background-color: #0e0000;
-}
-
-.divX:nth-child(15) {
-  background-color: #0f0000;
-}
-
-.divX:nth-child(16) {
-  background-color: #100000;
-}
-
-.divX:nth-child(17) {
-  background-color: #110000;
-}
-
-.divX:nth-child(18) {
-  background-color: #120000;
-}
-
-.divX:nth-child(19) {
-  background-color: #130000;
-}
-
-.divX:nth-child(20) {
-  background-color: #140000;
-}
-
-.divX:nth-child(21) {
-  background-color: #150000;
-}
-
-.divX:nth-child(22) {
-  background-color: #160000;
-}
-
-.divX:nth-child(23) {
-  background-color: #170000;
-}
-
-.divX:nth-child(24) {
-  background-color: #180000;
-}
-
-.divX:nth-child(25) {
-  background-color: #190000;
-}
-
-.divX:nth-child(26) {
-  background-color: #1a0000;
-}
-
-.divX:nth-child(27) {
-  background-color: #1b0000;
-}
-
-.divX:nth-child(28) {
-  background-color: #1c0000;
-}
-
-.divX:nth-child(29) {
-  background-color: #1d0000;
-}
-
-.divX:nth-child(30) {
-  background-color: #1e0000;
-}
-
-.divX:nth-child(31) {
-  background-color: #1f0000;
-}
-
-.divX:nth-child(32) {
-  background-color: #200000;
-}
-
-.divX:nth-child(33) {
-  background-color: #210000;
-}
-
-.divX:nth-child(34) {
-  background-color: #220000;
-}
-
-.divX:nth-child(35) {
-  background-color: #230000;
-}
-
-.divX:nth-child(36) {
-  background-color: #240000;
-}
-
-.divX:nth-child(37) {
-  background-color: #250000;
-}
-
-.divX:nth-child(38) {
-  background-color: #260000;
-}
-
-.divX:nth-child(39) {
-  background-color: #270000;
-}
-
-.divX:nth-child(40) {
-  background-color: #280000;
-}
-
-.divX:nth-child(41) {
-  background-color: #290000;
-}
-
-.divX:nth-child(42) {
-  background-color: #2a0000;
-}
-
-.divX:nth-child(43) {
-  background-color: #2b0000;
-}
-
-.divX:nth-child(44) {
-  background-color: #2c0000;
-}
-
-.divX:nth-child(45) {
-  background-color: #2d0000;
-}
-
-.divX:nth-child(46) {
-  background-color: #2e0000;
-}
-
-.divX:nth-child(47) {
-  background-color: #2f0000;
-}
-
-.divX:nth-child(48) {
-  background-color: #300000;
-}
-
-.divX:nth-child(49) {
-  background-color: #310000;
-}
-
-.divX:nth-child(50) {
-  background-color: #320000;
-}
-
-.divX:nth-child(51) {
-  background-color: #330000;
-}
-
-.divX:nth-child(52) {
-  background-color: #340000;
-}
-
-.divX:nth-child(53) {
-  background-color: #350000;
-}
-
-.divX:nth-child(54) {
-  background-color: #360000;
-}
-
-.divX:nth-child(55) {
-  background-color: #370000;
-}
-
-.divX:nth-child(56) {
-  background-color: #380000;
-}
-
-.divX:nth-child(57) {
-  background-color: #390000;
-}
-
-.divX:nth-child(58) {
-  background-color: #3a0000;
-}
-
-.divX:nth-child(59) {
-  background-color: #3b0000;
-}
-
-.divX:nth-child(60) {
-  background-color: #3c0000;
-}
-
-.divX:nth-child(61) {
-  background-color: #3d0000;
-}
-
-.divX:nth-child(62) {
-  background-color: #3e0000;
-}
-
-.divX:nth-child(63) {
-  background-color: #3f0000;
-}
-
-.divX:nth-child(64) {
-  background-color: #400000;
-}
-
-.divX:nth-child(65) {
-  background-color: #410000;
-}
-
-.divX:nth-child(66) {
-  background-color: #420000;
-}
-
-.divX:nth-child(67) {
-  background-color: #430000;
-}
-
-.divX:nth-child(68) {
-  background-color: #440000;
-}
-
-.divX:nth-child(69) {
-  background-color: #450000;
-}
-
-.divX:nth-child(70) {
-  background-color: #460000;
-}
-
-.divX:nth-child(71) {
-  background-color: #470000;
-}
-
-.divX:nth-child(72) {
-  background-color: #480000;
-}
-
-.divX:nth-child(73) {
-  background-color: #490000;
-}
-
-.divX:nth-child(74) {
-  background-color: #4a0000;
-}
-
-.divX:nth-child(75) {
-  background-color: #4b0000;
-}
-
-.divX:nth-child(76) {
-  background-color: #4c0000;
-}
-
-.divX:nth-child(77) {
-  background-color: #4d0000;
-}
-
-.divX:nth-child(78) {
-  background-color: #4e0000;
-}
-
-.divX:nth-child(79) {
-  background-color: #4f0000;
-}
-
-.divX:nth-child(80) {
-  background-color: #500000;
-}
-
-.divX:nth-child(81) {
-  background-color: #510000;
-}
-
-.divX:nth-child(82) {
-  background-color: #520000;
-}
-
-.divX:nth-child(83) {
-  background-color: #530000;
-}
-
-.divX:nth-child(84) {
-  background-color: #540000;
-}
-
-.divX:nth-child(85) {
-  background-color: #550000;
-}
-
-.divX:nth-child(86) {
-  background-color: #560000;
-}
-
-.divX:nth-child(87) {
-  background-color: #570000;
-}
-
-.divX:nth-child(88) {
-  background-color: #580000;
-}
-
-.divX:nth-child(89) {
-  background-color: #590000;
-}
-
-.divX:nth-child(90) {
-  background-color: #5a0000;
-}
-
-.divX:nth-child(91) {
-  background-color: #5b0000;
-}
-
-.divX:nth-child(92) {
-  background-color: #5c0000;
-}
-
-.divX:nth-child(93) {
-  background-color: #5d0000;
-}
-
-.divX:nth-child(94) {
-  background-color: #5e0000;
-}
-
-.divX:nth-child(95) {
-  background-color: #5f0000;
-}
-
-.divX:nth-child(96) {
-  background-color: #600000;
-}
-
-.divX:nth-child(97) {
-  background-color: #610000;
-}
-
-.divX:nth-child(98) {
-  background-color: #620000;
-}
-
-.divX:nth-child(99) {
-  background-color: #630000;
-}
-
-.divX:nth-child(100) {
-  background-color: #640000;
-}
-
-.divX:nth-child(101) {
-  background-color: #650000;
-}
-
-.divX:nth-child(102) {
-  background-color: #660000;
-}
-
-.divX:nth-child(103) {
-  background-color: #670000;
-}
-
-.divX:nth-child(104) {
-  background-color: #680000;
-}
-
-.divX:nth-child(105) {
-  background-color: #690000;
-}
-
-.divX:nth-child(106) {
-  background-color: #6a0000;
-}
-
-.divX:nth-child(107) {
-  background-color: #6b0000;
-}
-
-.divX:nth-child(108) {
-  background-color: #6c0000;
-}
-
-.divX:nth-child(109) {
-  background-color: #6d0000;
-}
-
-.divX:nth-child(110) {
-  background-color: #6e0000;
-}
-
-.divX:nth-child(111) {
-  background-color: #6f0000;
-}
-
-.divX:nth-child(112) {
-  background-color: #700000;
-}
-
-.divX:nth-child(113) {
-  background-color: #710000;
-}
-
-.divX:nth-child(114) {
-  background-color: #720000;
-}
-
-.divX:nth-child(115) {
-  background-color: #730000;
-}
-
-.divX:nth-child(116) {
-  background-color: #740000;
-}
-
-.divX:nth-child(117) {
-  background-color: #750000;
-}
-
-.divX:nth-child(118) {
-  background-color: #760000;
-}
-
-.divX:nth-child(119) {
-  background-color: #770000;
-}
-
-.divX:nth-child(120) {
-  background-color: #780000;
-}
-
-.divX:nth-child(121) {
-  background-color: #790000;
-}
-
-.divX:nth-child(122) {
-  background-color: #7a0000;
-}
-
-.divX:nth-child(123) {
-  background-color: #7b0000;
-}
-
-.divX:nth-child(124) {
-  background-color: #7c0000;
-}
-
-.divX:nth-child(125) {
-  background-color: #7d0000;
-}
-
-.divX:nth-child(126) {
-  background-color: #7e0000;
-}
-
-.divX:nth-child(127) {
-  background-color: #7f0000;
-}
-
-.divX:nth-child(128) {
-  background-color: maroon;
-}
-
-.divX:nth-child(129) {
-  background-color: #810000;
-}
-
-.divX:nth-child(130) {
-  background-color: #820000;
-}
-
-.divX:nth-child(131) {
-  background-color: #830000;
-}
-
-.divX:nth-child(132) {
-  background-color: #840000;
-}
-
-.divX:nth-child(133) {
-  background-color: #850000;
-}
-
-.divX:nth-child(134) {
-  background-color: #860000;
-}
-
-.divX:nth-child(135) {
-  background-color: #870000;
-}
-
-.divX:nth-child(136) {
-  background-color: #880000;
-}
-
-.divX:nth-child(137) {
-  background-color: #890000;
-}
-
-.divX:nth-child(138) {
-  background-color: #8a0000;
-}
-
-.divX:nth-child(139) {
-  background-color: darkred;
-}
-
-.divX:nth-child(140) {
-  background-color: #8c0000;
-}
-
-.divX:nth-child(141) {
-  background-color: #8d0000;
-}
-
-.divX:nth-child(142) {
-  background-color: #8e0000;
-}
-
-.divX:nth-child(143) {
-  background-color: #8f0000;
-}
-
-.divX:nth-child(144) {
-  background-color: #900000;
-}
-
-.divX:nth-child(145) {
-  background-color: #910000;
-}
-
-.divX:nth-child(146) {
-  background-color: #920000;
-}
-
-.divX:nth-child(147) {
-  background-color: #930000;
-}
-
-.divX:nth-child(148) {
-  background-color: #940000;
-}
-
-.divX:nth-child(149) {
-  background-color: #950000;
-}
-
-.divX:nth-child(150) {
-  background-color: #960000;
-}
-
-.divX:nth-child(151) {
-  background-color: #970000;
-}
-
-.divX:nth-child(152) {
-  background-color: #980000;
-}
-
-.divX:nth-child(153) {
-  background-color: #990000;
-}
-
-.divX:nth-child(154) {
-  background-color: #9a0000;
-}
-
-.divX:nth-child(155) {
-  background-color: #9b0000;
-}
-
-.divX:nth-child(156) {
-  background-color: #9c0000;
-}
-
-.divX:nth-child(157) {
-  background-color: #9d0000;
-}
-
-.divX:nth-child(158) {
-  background-color: #9e0000;
-}
-
-.divX:nth-child(159) {
-  background-color: #9f0000;
-}
-
-.divX:nth-child(160) {
-  background-color: #a00000;
-}
-
-.divX:nth-child(161) {
-  background-color: #a10000;
-}
-
-.divX:nth-child(162) {
-  background-color: #a20000;
-}
-
-.divX:nth-child(163) {
-  background-color: #a30000;
-}
-
-.divX:nth-child(164) {
-  background-color: #a40000;
-}
-
-.divX:nth-child(165) {
-  background-color: #a50000;
-}
-
-.divX:nth-child(166) {
-  background-color: #a60000;
-}
-
-.divX:nth-child(167) {
-  background-color: #a70000;
-}
-
-.divX:nth-child(168) {
-  background-color: #a80000;
-}
-
-.divX:nth-child(169) {
-  background-color: #a90000;
-}
-
-.divX:nth-child(170) {
-  background-color: #aa0000;
-}
-
-.divX:nth-child(171) {
-  background-color: #ab0000;
-}
-
-.divX:nth-child(172) {
-  background-color: #ac0000;
-}
-
-.divX:nth-child(173) {
-  background-color: #ad0000;
-}
-
-.divX:nth-child(174) {
-  background-color: #ae0000;
-}
-
-.divX:nth-child(175) {
-  background-color: #af0000;
-}
-
-.divX:nth-child(176) {
-  background-color: #b00000;
-}
-
-.divX:nth-child(177) {
-  background-color: #b10000;
-}
-
-.divX:nth-child(178) {
-  background-color: #b20000;
-}
-
-.divX:nth-child(179) {
-  background-color: #b30000;
-}
-
-.divX:nth-child(180) {
-  background-color: #b40000;
-}
-
-.divX:nth-child(181) {
-  background-color: #b50000;
-}
-
-.divX:nth-child(182) {
-  background-color: #b60000;
-}
-
-.divX:nth-child(183) {
-  background-color: #b70000;
-}
-
-.divX:nth-child(184) {
-  background-color: #b80000;
-}
-
-.divX:nth-child(185) {
-  background-color: #b90000;
-}
-
-.divX:nth-child(186) {
-  background-color: #ba0000;
-}
-
-.divX:nth-child(187) {
-  background-color: #bb0000;
-}
-
-.divX:nth-child(188) {
-  background-color: #bc0000;
-}
-
-.divX:nth-child(189) {
-  background-color: #bd0000;
-}
-
-.divX:nth-child(190) {
-  background-color: #be0000;
-}
-
-.divX:nth-child(191) {
-  background-color: #bf0000;
-}
-
-.divX:nth-child(192) {
-  background-color: #c00000;
-}
-
-.divX:nth-child(193) {
-  background-color: #c10000;
-}
-
-.divX:nth-child(194) {
-  background-color: #c20000;
-}
-
-.divX:nth-child(195) {
-  background-color: #c30000;
-}
-
-.divX:nth-child(196) {
-  background-color: #c40000;
-}
-
-.divX:nth-child(197) {
-  background-color: #c50000;
-}
-
-.divX:nth-child(198) {
-  background-color: #c60000;
-}
-
-.divX:nth-child(199) {
-  background-color: #c70000;
-}
-
-.divX:nth-child(200) {
-  background-color: #c80000;
-}
-
-.divX:nth-child(201) {
-  background-color: #c90000;
-}
-
-.divX:nth-child(202) {
-  background-color: #ca0000;
-}
-
-.divX:nth-child(203) {
-  background-color: #cb0000;
-}
-
-.divX:nth-child(204) {
-  background-color: #cc0000;
-}
-
-.divX:nth-child(205) {
-  background-color: #cd0000;
-}
-
-.divX:nth-child(206) {
-  background-color: #ce0000;
-}
-
-.divX:nth-child(207) {
-  background-color: #cf0000;
-}
-
-.divX:nth-child(208) {
-  background-color: #d00000;
-}
-
-.divX:nth-child(209) {
-  background-color: #d10000;
-}
-
-.divX:nth-child(210) {
-  background-color: #d20000;
-}
-
-.divX:nth-child(211) {
-  background-color: #d30000;
-}
-
-.divX:nth-child(212) {
-  background-color: #d40000;
-}
-
-.divX:nth-child(213) {
-  background-color: #d50000;
-}
-
-.divX:nth-child(214) {
-  background-color: #d60000;
-}
-
-.divX:nth-child(215) {
-  background-color: #d70000;
-}
-
-.divX:nth-child(216) {
-  background-color: #d80000;
-}
-
-.divX:nth-child(217) {
-  background-color: #d90000;
-}
-
-.divX:nth-child(218) {
-  background-color: #da0000;
-}
-
-.divX:nth-child(219) {
-  background-color: #db0000;
-}
-
-.divX:nth-child(220) {
-  background-color: #dc0000;
-}
-
-.divX:nth-child(221) {
-  background-color: #dd0000;
-}
-
-.divX:nth-child(222) {
-  background-color: #de0000;
-}
-
-.divX:nth-child(223) {
-  background-color: #df0000;
-}
-
-.divX:nth-child(224) {
-  background-color: #e00000;
-}
-
-.divX:nth-child(225) {
-  background-color: #e10000;
-}
-
-.divX:nth-child(226) {
-  background-color: #e20000;
-}
-
-.divX:nth-child(227) {
-  background-color: #e30000;
-}
-
-.divX:nth-child(228) {
-  background-color: #e40000;
-}
-
-.divX:nth-child(229) {
-  background-color: #e50000;
-}
-
-.divX:nth-child(230) {
-  background-color: #e60000;
-}
-
-.divX:nth-child(231) {
-  background-color: #e70000;
-}
-
-.divX:nth-child(232) {
-  background-color: #e80000;
-}
-
-.divX:nth-child(233) {
-  background-color: #e90000;
-}
-
-.divX:nth-child(234) {
-  background-color: #ea0000;
-}
-
-.divX:nth-child(235) {
-  background-color: #eb0000;
-}
-
-.divX:nth-child(236) {
-  background-color: #ec0000;
-}
-
-.divX:nth-child(237) {
-  background-color: #ed0000;
-}
-
-.divX:nth-child(238) {
-  background-color: #ee0000;
-}
-
-.divX:nth-child(239) {
-  background-color: #ef0000;
-}
-
-.divX:nth-child(240) {
-  background-color: #f00000;
-}
-
-.divX:nth-child(241) {
-  background-color: #f10000;
-}
-
-.divX:nth-child(242) {
-  background-color: #f20000;
-}
-
-.divX:nth-child(243) {
-  background-color: #f30000;
-}
-
-.divX:nth-child(244) {
-  background-color: #f40000;
-}
-
-.divX:nth-child(245) {
-  background-color: #f50000;
-}
-
-.divX:nth-child(246) {
-  background-color: #f60000;
-}
-
-.divX:nth-child(247) {
-  background-color: #f70000;
-}
-
-.divX:nth-child(248) {
-  background-color: #f80000;
-}
-
-.divX:nth-child(249) {
-  background-color: #f90000;
-}
-
-.divX:nth-child(250) {
-  background-color: #fa0000;
-}
-
-.divX:nth-child(251) {
-  background-color: #fb0000;
-}
-
-.divX:nth-child(252) {
-  background-color: #fc0000;
-}
-
-.divX:nth-child(253) {
-  background-color: #fd0000;
-}
-
-.divX:nth-child(254) {
-  background-color: #fe0000;
-}
-
-.divX:nth-child(255) {
-  background-color: red;
+  height: 100px;
+  width: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
