--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,17 +1,21 @@
 body {
-    margin: 0 auto;
-    width: 10%;
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    
 }
-.containerX {
-    width: 100%;
+#containerX {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    flex-flow: wrap;
+    height: 80vh;
+    width: 500px;
 }
+
 .divX {
-    height: 20px;
-    max-width: 80px;
-}
-@for $color from 0 to 256 {
-    $colorX : rgb($color, 0, 0);
-    .divX:nth-child(#{$color}) {
-        background-color: $colorX;
-    }
+    height: 100px;
+    width: 10px;
 }
